background bug fix + sections beter afgesteld
background bug bij de volgende section gefixt. Deze ging eerst dwars door de section heen. Ook heb ik de sections perfect afgesteld.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </ul>
         </nav>
     </div>
-    <a href=# class="homebutton">Portfolio<br>Rafaël van der Heijden</a>
+        <p class="homebutton">Portfolio<br>Rafaël van der Heijden</p>
     <section id="IM">
         <h1 class="Headline">Interactive Media</h1>
     </section>
