card's half responsive + shadows en effects
Heb de cards wat verbeterd in looks en usefullness. Helaas ben ik vast gelopen op de witte pagina's. als je hier overheen hovered gaat de tekst boven aan de card niet naar zwart en ik weet niet waarom. Hier ga ik later naar kijken.

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <p class="homebutton">Portfolio<br>Rafaël van der Heijden</p>
     <section id="IM">
         <h1 class="Headline">Interactive Media</h1>
+    <div class="card-container">
         <div class=cardw>
             <div class="cardw-image"></div>
             <div class=cardw-text>
@@ -51,12 +52,52 @@
             </div>
             <div class="button-container"><a href=# class="card-btn">View more</a></div>
         </div>
+        <div class=cardw>
+            <div class="cardw-image"></div>
+            <div class=cardw-text>
+                <span>Prototype's</span>
+            </div>
+            <div class="button-container"><a href=# class="card-btn">View more</a></div>
+        </div>
+    </div>
     </section>
     <section id="DEV">
         <h1 class="Headlineblack">Development</h1>
+        <div class="card-container">
+            <div class=cardb>
+                <div class="cardb-image"></div>
+                <div class=cardb-text>
+                    <span id="cardheader">Javascript</span>
+                </div>
+                <div class="button-container-b"><a href=# class="card-btn">View more</a></div>
+            </div>
+            <div class=cardb>
+                <div class="cardb-image"></div>
+                <div class=cardb-text>
+                    <span card="cardheader">GitHub</span>
+                </div>
+                <div class="button-container-b"><a href=# class="card-btn">View more</a></div>
+            </div>
+        </div>
     </section>
     <section id="DES">
         <h1 class="Headline">Design</h1>
+        <div class="card-container">
+            <div class=cardw>
+                <div class="cardw-image"></div>
+                <div class=cardw-text>
+                    <span>Images</span>
+                </div>
+                <div class="button-container"><a href=# class="card-btn">View more</a></div>
+            </div>
+            <div class=cardw>
+                <div class="cardw-image"></div>
+                <div class=cardw-text>
+                    <span>Video's</span>
+                </div>
+                <div class="button-container"><a href=# class="card-btn">View more</a></div>
+            </div>
+        </div>
     </section>
     <section id="RE">
         <h1 class="Headlineblack">Research</h1>
