cards fixed and added
Ik heb de card bug gefixt. Ook heb ik deze nu toegevoegd aan alle secties. en beter gestyled

--- a/index.html
+++ b/index.html
@@ -101,12 +101,60 @@
     </section>
     <section id="RE">
         <h1 class="Headlineblack">Research</h1>
+        <div class="card-container">
+            <div class=cardb>
+                <div class="cardb-image"></div>
+                <div class=cardb-text>
+                    <span id="cardheader">Methoden</span>
+                </div>
+                <div class="button-container-b"><a href=# class="card-btn">View more</a></div>
+            </div>
+            <div class=cardb>
+                <div class="cardb-image"></div>
+                <div class=cardb-text>
+                    <span card="cardheader">Research</span>
+                </div>
+                <div class="button-container-b"><a href=# class="card-btn">View more</a></div>
+            </div>
+        </div>
     </section>
     <section id="COM">
         <h1 class="Headline">Communication</h1>
+        <div class="card-container">
+            <div class=cardw>
+                <div class="cardw-image"></div>
+                <div class=cardw-text>
+                    <span>Communication</span>
+                </div>
+                <div class="button-container"><a href=# class="card-btn">View more</a></div>
+            </div>
+            <div class=cardw>
+                <div class="cardw-image"></div>
+                <div class=cardw-text>
+                    <span>Platforms</span>
+                </div>
+                <div class="button-container"><a href=# class="card-btn">View more</a></div>
+            </div>
+        </div>
     </section>
     <section id="PROF">
         <h1 class="Headlineblack">Professional Identity</h1>
+        <div class="card-container">
+            <div class=cardb>
+                <div class="cardb-image"></div>
+                <div class=cardb-text>
+                    <span id="cardheader">Proftaak</span>
+                </div>
+                <div class="button-container-b"><a href=# class="card-btn">View more</a></div>
+            </div>
+            <div class=cardb>
+                <div class="cardb-image"></div>
+                <div class=cardb-text>
+                    <span card="cardheader">Groepsproject</span>
+                </div>
+                <div class="button-container-b"><a href=# class="card-btn">View more</a></div>
+            </div>
+        </div>
     </section>
 </body>
 </html>
